/*
 * $Id: ChangeLog,v 1.3720 2005/01/08 11:26:38 ptsarenko Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-01-09 09:05 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * make_gnu.sh
    ! Fixed DJGPP detection (it has no uname).
    ! Enable HB_GPM_MOUSE only for Linux.
    ! Disable HB_MT for DOS.
    ! Use the default GTs specified in help output for different platforms.
    * Default installation paths now respect $PREFIX if set. Otherwise,
      /usr/local is used.
  * bin/hb-func.sh
    ! Fixed tr syntax for compatibility with MinGW.
    ! Changed $PATH separator character to ';' for DOS.
    ! Make -static the default in DOS.
    ! Don't generate main function request on DJGPP.
  * contrib/libnf/chdir.c
  * contrib/libnf/mkdir.c
    ! Fixed for DJGPP.
  * source/common/hbver.c
    ! Fixed the names of DJGPP and MinGW compilers.
  * source/compiler/hbusage.c
    * Added 2005 to the copyright message.
  * source/pp/ppcore.c
    * Fixed a pair of typos.
  * source/rtl/gtwvt/wvtutils.c
  * source/tip/utils.c
    ! Typecasts.

2004-01-08 13:00 UTC+0200 Pavel Tsarenko <tpe2@mail.ru>
  ! Changelog
    ! Restored 1.3714 entries
  ! source/odbc/todbc.prg
    ! Fixed :LoadData() method and data fetch for non-cached recordsets
      Thanks to EMG and Gianluca Piemonte

2006-01-07 06:25 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/gtwin/gtwin.c
    * SC_NORMAL 'shape' is now 13 instead or 12 or 25.
    * removed call to GetConsoleCursorInfo().
    * HB_GTWIN_NORMAL_CURSOR is no longer used.

2005-01-06 10:15 UTC-300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * utils/hbmake/hbmake.prg
    ! Fixed to cancel make process if makefile is in read-only mode.
      Thanks to Alan Candido for report.

2005-01-05 15:55 UTC-300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * source/ct/diskutil.prg