@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.3720 2005/01/08 11:26:38 ptsarenko Exp $
+ * $Id: ChangeLog,v 1.3721 2005/01/09 06:08:11 likewolf Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,14 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-01-09 23:40 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
+  * make_gnu.sh
+  * make_tgz.sh
+  * bin/hb-func.sh
+    ! Changed tr syntax to use character classes.
+  * source/debug/tbrwtext.prg
+    * Reformatted.
 
 2004-01-09 09:05 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
   * make_gnu.sh
